// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsItem boolean type should match snapshot 1`] = `
<div
  className="css-eawcpc"
>
  <div
    className="css-aoco0s"
  />
  <div
    className="css-vysije"
  >
    <h4
      className="css-sazcsg"
    >
      foo
    </h4>
    <p
      className="css-5dhv03"
    >
      bar
    </p>
  </div>
  <div
    className="css-gl03vp"
  >
    <div
      className="css-cm335p"
      onClick={[Function]}
    >
      <div
        className="css-3br9lw"
      />
    </div>
  </div>
</div>
`;

exports[`SettingsItem button type should match snapshot 1`] = `
<div
  className="css-eawcpc"
>
  <div
    className="css-aoco0s"
  />
  <div
    className="css-vysije"
  >
    <h4
      className="css-sazcsg"
    >
      foo
    </h4>
    <p
      className="css-5dhv03"
    >
      bar
    </p>
  </div>
  <div
    className="css-19d2vsr"
  >
    <button
      className="css-1g0nwtk"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      baz
    </button>
  </div>
</div>
`;

exports[`SettingsItem should match snapshot 1`] = `
<div
  className="css-eawcpc"
>
  <div
    className="css-aoco0s"
  />
  <div
    className="css-vysije"
  >
    <h4
      className="css-sazcsg"
    >
      foo
    </h4>
    <p
      className="css-5dhv03"
    >
      bar
    </p>
  </div>
  <div
    className="css-gl03vp"
  >
    <div
      className="css-cm335p"
      onClick={[Function]}
    >
      <div
        className="css-f93aoc"
      />
    </div>
  </div>
</div>
`;
